Add support for `select` and `unselect`
This commit extends the `WithForm::Form` class to support selecting
[`<option>`][option] elements from a [`<select>`][select] element whose
[`<label>`][label] has been generated by a call to
[`ActionView::Helpers::FormBuilder#label`][label_helper]. The `#select`
method's interface mimics the
[`Capybara::Session#select`][select_helper] method's interface.

Additionally, implements `#unselect` to mimic the
[`Capybara::Session#unselect`][unselect_helper] method's interface for
unselecting from a [`<select multiple="true">` element][multiple].

[option]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/option
[select_helper]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Node/Actions#select-instance_method
[select]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/select
[label]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/label
[label_helper]: https://api.rubyonrails.org/classes/ActionView/Helpers/FormBuilder.html#method-i-label
[unselect_helper]: https://rubydoc.info/github/teamcapybara/capybara/master/Capybara/Node/Actions#unselect-instance_method
[multiple]: https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/multiple

--- a/test/dummy/config/locales/en.yml
+++ b/test/dummy/config/locales/en.yml
@@ -34,5 +34,8 @@ en:
   helpers:
     label:
       widget:
+        checkbox_field: "Checkbox Field"
+        multiple_select_field: "Multiple Select Field"
+        select_field: "Select Field"
         text_field: "Widget Text Field"
         text_area_field: "Widget Text Area Field"
