--- a/test/dummy/config/locales/en.yml
+++ b/test/dummy/config/locales/en.yml
@@ -46,6 +46,8 @@ en:
     submit:
       widget_record:
         create: "Create"
+        submit: "Submit"
         update: "Update"
       widget:
+        create: "Create"
         submit: "Submit"
