Improve `type="checkbox"` tests and guides
This commit improves support for `check` and `uncheck` calls to
`with_form(model:)` invocations that are passed `ActiveRecord::Base`
instances.

To support this, add migrations to add a `Boolean` column to the
`widget_records` table.

--- a/test/dummy/config/locales/en.yml
+++ b/test/dummy/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
   helpers:
     label:
       widget_record:
+        boolean_check_box_field: "Record Boolean Check Box Field"
         text_field: "Record Text Field"
       widget:
         checkbox_field: "Checkbox Field"
